Update the docs

--- a/docs/pages/about.mdx
+++ b/docs/pages/about.mdx
@@ -1,9 +1,96 @@
-# ℹ️ About
+# ℹ️ About AgentVectorDB
 
-AgentVectorDB is an open-source project by [Shashi Jagtap](https://github.com/shashijagtap) and contributors.
+## Overview
+AgentVectorDB is a flagship open-source project by [Superagentic AI](https://super-agentic.ai), designed to revolutionize how AI agents store, retrieve, and manage their cognitive states.
 
-- [GitHub Repository](https://github.com/superagenticai/agentvectordb)
-- [License: Apache-2.0](https://github.com/superagenticai/agentvectordb/blob/main/LICENSE)
+## About Superagentic AI
+
+[Superagentic AI](https://super-agentic.ai) is a pioneering company dedicated to building cutting-edge AI agent tools and software. Our mission is to enable safer, smarter agentic systems through Agent Experience (AgentEx) for businesses.
+
+### Our Focus
+- **Agent Experience (AgentEx)**: Developing tools that enhance how AI agents interact with data and systems
+- **Safety-First Approach**: Building reliable, secure, and ethical AI agent infrastructure
+- **Business Integration**: Creating enterprise-ready solutions for AI agent deployment
+
+## Project Leadership
+
+### Core Team
+- **[Shashi Jagtap](https://github.com/shashijagtap)** - Project Lead & Founder
+- Engineering Team at Superagentic AI
+- Open Source Contributors
+
+## Technical Details
+
+### Built with Modern Stack
+- LanceDB for vector operations
+- Python 3.8+ compatibility
+- Async-first architecture
+- Enterprise-grade security
+
+### Key Features
+- Optimized for agent memory management
+- High-performance vector operations
+- Flexible embedding support
+- Rich metadata handling
+- Async/sync API support
+
+## Open Source Commitment
+
+AgentVectorDB is proudly open source, released under the Apache-2.0 license. We believe in:
+- Transparent development
+- Community collaboration
+- Shared innovation
+- Ethical AI development
+
+## Contributing
+
+We welcome contributions from the community! Here's how you can get involved:
+
+### Ways to Contribute
+- Submit bug reports and feature requests
+- Improve documentation
+- Share use cases and examples
+- Submit pull requests
+
+> [!tip]
+> Check our [Contributing Guidelines](https://github.com/superagenticai/agentvectordb/blob/main/CONTRIBUTING.md) for detailed information.
+
+## Community & Support
+
+### Get in Touch
+- [GitHub Discussions](https://github.com/superagenticai/agentvectordb/discussions)
+- [Discord Community](https://discord.gg/agentvectordb)
+- [Twitter Updates](https://twitter.com/superagenticai)
+
+### Professional Support
+For enterprise support and consulting, contact:
+- Email: support@super-agentic.ai
+- Website: [super-agentic.ai](https://super-agentic.ai)
+
+## License & Attribution
+
+AgentVectorDB is licensed under the [Apache License 2.0](https://github.com/superagenticai/agentvectordb/blob/main/LICENSE).
+
+```bibtex
+@software{agentvectordb2024,
+  title = {AgentVectorDB: The Cognitive Core for AI Agents},
+  author = {Jagtap, Shashi and Superagentic AI},
+  year = {2024},
+  url = {https://github.com/superagenticai/agentvectordb}
+}
+```
 
 > [!info]
-> Contributions are welcome! See [CONTRIBUTING.md](https://github.com/superagenticai/agentvectordb/blob/main/CONTRIBUTING.md).
+> AgentVectorDB is a trademark of Superagentic AI. All rights reserved.
+
+## Acknowledgments
+
+Special thanks to:
+- Our open source contributors
+- The LanceDB team
+- The broader AI agent community
+- Our enterprise partners
+
+---
+
+Built with ❤️ by [Superagentic AI](https://super-agentic.ai)
