--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,28 +1,74 @@
 # 🧠 AgentVectorDB
 
-> **AgentVectorDB** is the Cognitive Core for Your AI Agents.  
-> A lightweight, embeddable vector database for Agentic AI systems, built on LanceDB.
+> The Cognitive Core for Your AI Agents
 
----
+AgentVectorDB is a lightweight, embeddable vector database designed specifically for AI agents. It provides efficient memory storage, retrieval, and context management built on LanceDB.
 
-## 🚀 Why AgentVectorDB?
+## 🌟 Key Features
 
-- **Purpose-built for Agents:** Designed for agentic memory, context, and retrieval.
-- **Fast & Lightweight:** Minimal dependencies, blazing fast queries.
-- **Flexible:** Works with any embedding model or agent framework.
-- **Open Source & Extensible:** Built with best practices, ready for community contributions.
+### 💫 Purpose-Built for Agents
+- Optimized for agent memory and context management
+- Flexible schema design for various agent types
+- Built-in importance scoring and metadata
 
----
+### ⚡️ High Performance
+- Fast vector similarity search
+- Efficient memory management
+- Minimal resource footprint
 
-## 📦 Features
+### 🔄 Async First
+- Native async/await support
+- Perfect for real-time agent interactions
+- Efficient concurrent operations
 
-- Store, query, and manage agent memories efficiently
-- Synchronous and asynchronous APIs
-- Customizable schemas and embedding functions
-- Easy integration with Python AI frameworks
+### 🛠 Developer Friendly
+- Simple, intuitive API
+- Extensive documentation
+- Ready-to-use examples
 
----
+## 🚀 Quick Start
 
-> [!tip]
-> **Get started:**  
-> Check out the [Getting Started](getting-started) guide to install and use AgentVectorDB in minutes!
+```python
+from agentvectordb import AgentVectorDBStore
+
+# Initialize store
+store = AgentVectorDBStore(db_path="./agent_memory")
+
+# Create collection
+collection = store.get_or_create_collection("thoughts")
+
+# Add memory
+collection.add(
+    content="Planning next steps",
+    type="thought",
+    importance_score=0.9
+)
+```
+
+## 📚 Documentation Sections
+
+- [🎯 Getting Started](getting-started) - Quick installation and setup
+- [💡 Core Concepts](concepts) - Understanding the basics
+- [📖 Guides](guides) - Detailed usage instructions
+- [🧪 Examples](examples) - Real-world usage examples
+- [🛠 API Reference](api-reference) - Complete API documentation
+
+## 💻 Installation
+
+```bash
+pip install agentvectordb
+```
+
+> [!tip] 
+> Check out our [Getting Started](getting-started) guide for detailed installation instructions!
+
+## 🤝 Community
+
+Join our growing community:
+- [GitHub Discussions](https://github.com/superagenticai/agentvectordb/discussions)
+- [Discord Community](https://discord.gg/agentvectordb)
+- [Twitter Updates](https://twitter.com/agentvectordb)
+
+## 📄 License
+
+AgentVectorDB is available under the Apache 2.0 License.
