--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -1,17 +1,199 @@
-# ❓ FAQ
+# ❓ Frequently Asked Questions
 
-## What is AgentVectorDB?
+## General Questions
 
-A lightweight, embeddable vector database for agentic AI systems, built on LanceDB.
+### What is AgentVectorDB?
+AgentVectorDB is a specialized vector database designed for AI agents. It provides:
+- Efficient memory storage and retrieval
+- Semantic search capabilities
+- Async/sync API support
+- Built-in importance scoring
+- Metadata management
 
-## What Python versions are supported?
+### Why use AgentVectorDB?
+- **Purpose-built for agents**: Optimized for agent memory management
+- **Lightweight**: Minimal dependencies and resource usage
+- **Flexible**: Works with any embedding model
+- **Fast**: Built on LanceDB for high-performance vector operations
+- **Easy to use**: Simple, intuitive API
 
-Python 3.8 and above.
+## Technical Questions
 
-## Can I use my own embedding model?
+### What Python versions are supported?
+AgentVectorDB supports:
+- Python 3.8
+- Python 3.9
+- Python 3.10
+- Python 3.11
+- Python 3.12
 
-Yes! You can plug in any embedding function compatible with your agent framework.
+```python
+# Check your Python version
+import sys
+print(sys.version)
+```
 
-## Where can I get help?
+### How do I use custom embedding models?
 
-Open an issue on [GitHub](https://github.com/superagenticai/agentvectordb) or join our community!
+You can implement your own embedding function:
+
+```python
+from agentvectordb.embeddings import BaseEmbeddingFunction
+
+class CustomEmbedder(BaseEmbeddingFunction):
+    def __init__(self):
+        super().__init__(dimension=384)
+    
+    def embed(self, texts):
+        # Your embedding logic here
+        return vectors
+
+# Use custom embedder
+store = AgentVectorDBStore()
+collection = store.get_or_create_collection(
+    name="memories",
+    embedding_function=CustomEmbedder()
+)
+```
+
+### What's the maximum vector dimension supported?
+
+There's no hard limit, but we recommend:
+- 64-512 dimensions for simple use cases
+- 768-1024 dimensions for transformer models
+- Up to 4096 dimensions for specialized cases
+
+> [!note]
+> Higher dimensions increase memory usage and processing time.
+
+### How do I handle concurrent access?
+
+Use the async API for concurrent operations:
+
+```python
+from agentvectordb import AsyncAgentVectorDBStore
+
+async def safe_access():
+    store = AsyncAgentVectorDBStore()
+    collection = await store.get_or_create_collection("shared_memories")
+    await collection.add(content="Concurrent access test")
+```
+
+## Performance Questions
+
+### What's the recommended batch size for additions?
+
+We recommend:
+- 100-1000 items per batch for normal usage
+- 50-100 items for real-time applications
+- Up to 5000 items for bulk imports
+
+```python
+def optimal_batch_add(collection, items, batch_size=1000):
+    for i in range(0, len(items), batch_size):
+        batch = items[i:i + batch_size]
+        collection.add_batch(batch)
+```
+
+### How can I optimize query performance?
+
+1. Use efficient filters:
+```python
+# Good
+results = collection.query(
+    query_text="important",
+    filter_sql="importance_score > 0.8"
+)
+
+# Better (using indexed fields)
+results = collection.query(
+    query_text="important",
+    filter_sql="type = 'critical' AND metadata.priority = 'high'"
+)
+```
+
+2. Choose appropriate vector dimensions:
+```python
+# Balance between accuracy and performance
+embedder = DefaultTextEmbeddingFunction(dimension=384)
+```
+
+## Error Handling
+
+### How do I debug common errors?
+
+1. Connection Issues:
+```python
+try:
+    store = AgentVectorDBStore(db_path="./my_db")
+except InitializationError as e:
+    print(f"Database initialization failed: {e}")
+```
+
+2. Query Errors:
+```python
+try:
+    results = collection.query(query_text="test")
+except QueryError as e:
+    print(f"Query failed: {e}")
+```
+
+### How do I handle migration errors?
+
+Use our migration utility:
+```python
+from agentvectordb.utils import migrate_database
+
+try:
+    migrate_database("old_db_path", "new_db_path")
+except OperationError as e:
+    print(f"Migration failed: {e}")
+```
+
+## Community and Support
+
+### Where can I get help?
+
+1. **GitHub Issues**: 
+   - Report bugs
+   - Request features
+   - Ask technical questions
+   - [Open an issue](https://github.com/superagenticai/agentvectordb/issues)
+
+2. **Community Channels**:
+   - Discord server
+   - GitHub Discussions
+   - Stack Overflow tag: `agentvectordb`
+
+### How can I contribute?
+
+1. Fork the repository
+2. Create a feature branch
+3. Submit a pull request
+
+```bash
+# Contributing workflow
+git clone https://github.com/yourusername/agentvectordb.git
+cd agentvectordb
+git checkout -b feature/your-feature
+# Make changes
+git commit -am "Add new feature"
+git push origin feature/your-feature
+```
+
+> [!tip]
+> Check our [Contributing Guidelines](https://github.com/superagenticai/agentvectordb/blob/main/CONTRIBUTING.md) for more details.
+
+### How do I cite AgentVectorDB?
+
+```bibtex
+@software{agentvectordb2024,
+  title = {AgentVectorDB: The Cognitive Core for AI Agents},
+  author = {Jagtap, Shashi},
+  year = {2024},
+  url = {https://github.com/superagenticai/agentvectordb}
+}
+```
+
+> [!important]
+> Still have questions? Join our [Discord community](https://discord.gg/agentvectordb) for real-time support!
