Update the docs

--- a/docs/pages/concepts.mdx
+++ b/docs/pages/concepts.mdx
@@ -132,5 +132,5 @@ collection.add(
 - Filter results effectively
 - Balance precision and recall
 
-> [!tip]
-> Check the [Guides](guides) section for detailed implementation examples!
+
+Check the [Guides](guides) section for detailed implementation examples!
