--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -195,5 +195,5 @@ git push origin feature/your-feature
 }
 ```
 
-> [!important]
-> Still have questions? Join our [Discord community](https://discord.gg/agentvectordb) for real-time support!
+
+Still have questions? Contact support@super-agentic.ai
