--- a/docs/pages/guides.mdx
+++ b/docs/pages/guides.mdx
@@ -241,8 +241,8 @@ logging.basicConfig(
 )
 ```
 
-> [!important]
-> Always use virtual environments for isolation:
+
+Always use virtual environments for isolation:
 > ```bash
 > python -m venv venv
 > source venv/bin/activate  # On Windows: venv\Scripts\activate
